[package]
name = "bitwrought"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
sha2 = "0.10.6"
xattr = "1.0.0"


[dev-dependencies]
assert_cmd = "2.0.8"
coreutils = { version = "0.0.17", features = ["macos"] }
rand = "0.8.5"
tempfile = "3.3.0"
