[package]
name = "bitwrought"
version = "0.1.0"
authors = ["Danny Little"]
license = "MIT OR Apache-2.0"
description = "A data integrity checker"
readme = "README.md"
repository = "https://github.com/dslittle22/bitwrought"
keywords = ["cli", "data integrity", "bit rot", "checksum",]
categories = ["command-line-utilities"]
edition = "2021"


[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
sha2 = "0.10.6"
xattr = "1.0.0"


[dev-dependencies]
assert_cmd = "2.0.8"
chrono = "0.4.23"
rand = "0.8.5"
tempfile = "3.3.0"
